# Copyright (C) 2019 by Sukchan Lee <acetcom@gmail.com>

# This file is part of Open5GS.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

libasn1c_lpp_sources = files('''
    A-GNSS-Error.c
    A-GNSS-ProvideAssistanceData.c
    A-GNSS-ProvideCapabilities.c
    A-GNSS-ProvideLocationInformation.c
    A-GNSS-RequestAssistanceData.c
    A-GNSS-RequestCapabilities.c
    A-GNSS-RequestLocationInformation.c
    ARFCN-ValueEUTRA-r14.c
    ARFCN-ValueEUTRA-v9a0.c
    ARFCN-ValueEUTRA.c
    ARFCN-ValueNR-r15.c
    ARFCN-ValueUTRA.c
    AUX-ReferenceStationID-Element-r15.c
    AUX-ReferenceStationList-r15.c
    Abort-r9-IEs.c
    Abort.c
    AccessTypes.c
    Acknowledgement.c
    Add-PRSconfigNeighbourElement-r14.c
    AdditionalInformation.c
    AdditionalPath-r14.c
    AdditionalPathList-r14.c
    AllowedReportingType.c
    AlmanacBDS-AlmanacSet-r12.c
    AlmanacECEF-SBAS-AlmanacSet.c
    AlmanacGLONASS-AlmanacSet.c
    AlmanacKeplerianSet.c
    AlmanacMidiAlmanacSet.c
    AlmanacNAV-KeplerianSet.c
    AlmanacNavIC-AlmanacSet-r16.c
    AlmanacReducedKeplerianSet.c
    AltitudeInfo.c
    AntennaDescription-r15.c
    AntennaReferencePointUnc-r15.c
    ApplicationID.c
    AreaEventParams.c
    AreaEventType.c
    AreaId.c
    AreaIdList.c
    AreaIdSet.c
    AreaIdSetType.c
    AssistanceDataSupportList.c
    Aux-ARP-Unc-r15.c
    AuxiliaryStationElement-r15.c
    AuxiliaryStationList-r15.c
    BDS-ClockModel-r12.c
    BDS-ClockModel2-r16.c
    BDS-DifferentialCorrections-r12.c
    BDS-DifferentialCorrectionsReq-r12.c
    BDS-DifferentialCorrectionsSupport-r12.c
    BDS-GridModelParameter-r12.c
    BDS-GridModelReq-r12.c
    BDS-GridModelSupport-r12.c
    BDS-SgnTypeElement-r12.c
    BDS-SgnTypeList-r12.c
    BIT_STRING.c
    BOOLEAN.c
    BT-Error-r13.c
    BT-LocationServerErrorCauses-r13.c
    BT-MeasurementElement-r13.c
    BT-MeasurementInformation-r13.c
    BT-MeasurementList-r13.c
    BT-ProvideCapabilities-r13.c
    BT-ProvideLocationInformation-r13.c
    BT-RequestCapabilities-r13.c
    BT-RequestLocationInformation-r13.c
    BT-TargetDeviceErrorCauses-r13.c
    BadSignalElement.c
    BasicProtectionParams.c
    BatchRepCap.c
    BatchRepConditions.c
    BatchRepType.c
    CDMAAreaId.c
    CNAV-ClockModel.c
    CPICH-Ec-N0.c
    CPICH-RSCP.c
    CarrierFreq-NB-r14.c
    CarrierFreqOffsetNB-r14.c
    CauseCode.c
    CdmaCellInformation.c
    CellGlobalIdEUTRA-AndUTRA.c
    CellGlobalIdEUTRA.c
    CellGlobalIdGERAN.c
    CellIdentity.c
    CellInfo.c
    CellMeasuredResults.c
    CellMeasuredResultsList.c
    CellParametersID.c
    ChipRate.c
    CircularArea.c
    CommonIEsAbort.c
    CommonIEsError.c
    CommonIEsProvideAssistanceData.c
    CommonIEsProvideCapabilities.c
    CommonIEsProvideLocationInformation.c
    CommonIEsRequestAssistanceData.c
    CommonIEsRequestCapabilities.c
    CommonIEsRequestLocationInformation.c
    Coordinate.c
    DBDS-CorrectionElement-r12.c
    DBDS-CorrectionList-r12.c
    DGANSS-Sig-Id-Req.c
    DGNSS-CorrectionsElement.c
    DGNSS-SatList.c
    DGNSS-SgnTypeElement.c
    DGNSS-SgnTypeList.c
    DL-PRS-BeamInfoElement-r16.c
    DL-PRS-BeamInfoResourceSet-r16.c
    DL-PRS-BeamInfoSet-r16.c
    DL-PRS-IdInfo-r16.c
    DL-PRS-QCL-Info-r16.c
    DL-PRS-Resource-ARP-Element-r16.c
    DL-PRS-ResourceSets-TRP-Element-r16.c
    DL-Selected-PRS-ResourceSetIndex-r16.c
    DL-SelectedPRS-ResourceIndex-r16.c
    Delta-Height-r16.c
    Delta-Latitude-r16.c
    Delta-Longitude-r16.c
    DeltaTime-r15.c
    Displacement-r15.c
    DisplacementInfoList-r15.c
    DisplacementInfoListElement-r15.c
    DisplacementTimeStamp-r15.c
    ECGI.c
    ECID-Error.c
    ECID-LocationServerErrorCauses.c
    ECID-ProvideCapabilities.c
    ECID-ProvideLocationInformation.c
    ECID-RequestCapabilities.c
    ECID-RequestLocationInformation.c
    ECID-SignalMeasurementInformation.c
    ECID-TargetDeviceErrorCauses.c
    EPDU-Body.c
    EPDU-ID.c
    EPDU-Identifier.c
    EPDU-Name.c
    EPDU-Sequence.c
    EPDU.c
    EarlyFixReport-r12.c
    Ellipsoid-Point.c
    Ellipsoid-PointWithUncertaintyCircle.c
    EllipsoidArc.c
    EllipsoidPointWithAltitude.c
    EllipsoidPointWithAltitudeAndUncertaintyEllipsoid.c
    EllipsoidPointWithUncertaintyEllipse.c
    EllipticalArea.c
    EncodingType.c
    Environment.c
    EqualIntegerAmbiguityLevel-r16.c
    Error-r9-IEs.c
    Error.c
    EventTriggerCapabilities.c
    ExtendedEphCheck.c
    ExtendedEphemeris.c
    FKP-Gradients-Element-r15.c
    FKP-Gradients-List-r15.c
    FQDN.c
    FormatIndicator.c
    FrequencyInfo.c
    FrequencyInfoFDD.c
    FrequencyInfoTDD.c
    GANSSPositionMethod.c
    GANSSPositionMethods.c
    GANSSPositioningMethodTypes.c
    GANSSSignals.c
    GANSSSignalsDescription.c
    GANSSextEphTime.c
    GANSSsignalsInfo.c
    GLO-RTK-BiasInformation-r15.c
    GLO-RTK-BiasInformationReq-r15.c
    GLO-RTK-BiasInformationSupport-r15.c
    GLONASS-ClockModel.c
    GNSS-AcquisitionAssistElement.c
    GNSS-AcquisitionAssistList.c
    GNSS-AcquisitionAssistance.c
    GNSS-AcquisitionAssistanceReq.c
    GNSS-AcquisitionAssistanceSupport.c
    GNSS-Almanac.c
    GNSS-AlmanacElement.c
    GNSS-AlmanacList.c
    GNSS-AlmanacReq.c
    GNSS-AlmanacSupport.c
    GNSS-AuxiliaryInformation.c
    GNSS-AuxiliaryInformationReq.c
    GNSS-AuxiliaryInformationSupport.c
    GNSS-BadSignalList.c
    GNSS-ClockModel.c
    GNSS-CommonAssistData.c
    GNSS-CommonAssistDataReq.c
    GNSS-CommonAssistanceDataSupport.c
    GNSS-DataBitAssistance.c
    GNSS-DataBitAssistanceReq.c
    GNSS-DataBitAssistanceSupport.c
    GNSS-DataBitsReqSatElement.c
    GNSS-DataBitsReqSatList.c
    GNSS-DataBitsSatElement.c
    GNSS-DataBitsSatList.c
    GNSS-DataBitsSgnElement.c
    GNSS-DataBitsSgnList.c
    GNSS-DifferentialCorrections.c
    GNSS-DifferentialCorrectionsReq.c
    GNSS-DifferentialCorrectionsSupport.c
    GNSS-EarthOrientationParameters.c
    GNSS-EarthOrientationParametersReq.c
    GNSS-EarthOrientationParametersSupport.c
    GNSS-FrequencyID-r15.c
    GNSS-GenericAssistData.c
    GNSS-GenericAssistDataElement.c
    GNSS-GenericAssistDataReq.c
    GNSS-GenericAssistDataReqElement.c
    GNSS-GenericAssistDataSupportElement.c
    GNSS-GenericAssistanceDataSupport.c
    GNSS-ID-BDS-SatElement-r16.c
    GNSS-ID-BDS-r16.c
    GNSS-ID-Bitmap.c
    GNSS-ID-GLONASS-SatElement.c
    GNSS-ID-GLONASS.c
    GNSS-ID-GPS-SatElement.c
    GNSS-ID-GPS.c
    GNSS-ID.c
    GNSS-IonosphericModel.c
    GNSS-IonosphericModelReq.c
    GNSS-IonosphericModelSupport.c
    GNSS-Link-Combinations-r15.c
    GNSS-Link-CombinationsList-r15.c
    GNSS-LocationInformation.c
    GNSS-LocationServerErrorCauses.c
    GNSS-MeasurementForOneGNSS.c
    GNSS-MeasurementList.c
    GNSS-NavListInfo-r15.c
    GNSS-NavModelSatelliteElement.c
    GNSS-NavModelSatelliteList.c
    GNSS-NavigationModel.c
    GNSS-NavigationModelReq.c
    GNSS-NavigationModelSupport.c
    GNSS-NetworkID-r15.c
    GNSS-ObservationList-r15.c
    GNSS-OrbitModel.c
    GNSS-PeriodicAssistData-r15.c
    GNSS-PeriodicAssistDataReq-r15.c
    GNSS-PeriodicControlParam-r15.c
    GNSS-PositioningInstructions.c
    GNSS-RTK-AuxiliaryStationData-r15.c
    GNSS-RTK-AuxiliaryStationDataReq-r15.c
    GNSS-RTK-AuxiliaryStationDataSupport-r15.c
    GNSS-RTK-CommonObservationInfo-r15.c
    GNSS-RTK-FKP-Gradients-r15.c
    GNSS-RTK-FKP-GradientsReq-r15.c
    GNSS-RTK-FKP-GradientsSupport-r15.c
    GNSS-RTK-MAC-CorrectionDifferences-r15.c
    GNSS-RTK-MAC-CorrectionDifferencesReq-r15.c
    GNSS-RTK-MAC-CorrectionDifferencesSupport-r15.c
    GNSS-RTK-Observations-r15.c
    GNSS-RTK-ObservationsReq-r15.c
    GNSS-RTK-ObservationsSupport-r15.c
    GNSS-RTK-ReferenceStationInfo-r15.c
    GNSS-RTK-ReferenceStationInfoReq-r15.c
    GNSS-RTK-ReferenceStationInfoSupport-r15.c
    GNSS-RTK-Residuals-r15.c
    GNSS-RTK-ResidualsReq-r15.c
    GNSS-RTK-ResidualsSupport-r15.c
    GNSS-RTK-SatelliteDataElement-r15.c
    GNSS-RTK-SatelliteSignalDataElement-r15.c
    GNSS-RTK-SatelliteSignalDataList-r15.c
    GNSS-RealTimeIntegrity.c
    GNSS-RealTimeIntegrityReq.c
    GNSS-RealTimeIntegritySupport.c
    GNSS-ReferenceLocation.c
    GNSS-ReferenceLocationReq.c
    GNSS-ReferenceLocationSupport.c
    GNSS-ReferenceStationID-r15.c
    GNSS-ReferenceTime.c
    GNSS-ReferenceTimeForOneCell.c
    GNSS-ReferenceTimeReq.c
    GNSS-ReferenceTimeSupport.c
    GNSS-SSR-ArrayOfCorrectionPoints-r16.c
    GNSS-SSR-ClockCorrections-r15.c
    GNSS-SSR-ClockCorrectionsReq-r15.c
    GNSS-SSR-ClockCorrectionsSupport-r15.c
    GNSS-SSR-CodeBias-r15.c
    GNSS-SSR-CodeBiasReq-r15.c
    GNSS-SSR-CodeBiasSupport-r15.c
    GNSS-SSR-CorrectionPoints-r16.c
    GNSS-SSR-CorrectionPointsReq-r16.c
    GNSS-SSR-GriddedCorrection-r16.c
    GNSS-SSR-GriddedCorrectionReq-r16.c
    GNSS-SSR-GriddedCorrectionSupport-r16.c
    GNSS-SSR-ListOfCorrectionPoints-r16.c
    GNSS-SSR-OrbitCorrections-r15.c
    GNSS-SSR-OrbitCorrectionsReq-r15.c
    GNSS-SSR-OrbitCorrectionsSupport-r15.c
    GNSS-SSR-PhaseBias-r16.c
    GNSS-SSR-PhaseBiasReq-r16.c
    GNSS-SSR-PhaseBiasSupport-r16.c
    GNSS-SSR-STEC-Correction-r16.c
    GNSS-SSR-STEC-CorrectionReq-r16.c
    GNSS-SSR-STEC-CorrectionSupport-r16.c
    GNSS-SSR-URA-Req-r16.c
    GNSS-SSR-URA-Support-r16.c
    GNSS-SSR-URA-r16.c
    GNSS-SatMeasElement.c
    GNSS-SatMeasList.c
    GNSS-SgnMeasElement.c
    GNSS-SgnMeasList.c
    GNSS-SignalID.c
    GNSS-SignalIDs.c
    GNSS-SignalMeasurementInformation.c
    GNSS-SubNetworkID-r15.c
    GNSS-SupportElement.c
    GNSS-SupportList.c
    GNSS-SystemTime.c
    GNSS-TargetDeviceErrorCauses.c
    GNSS-TimeModelElement.c
    GNSS-TimeModelElementReq.c
    GNSS-TimeModelList.c
    GNSS-TimeModelListReq.c
    GNSS-TimeModelListSupport.c
    GNSS-UTC-Model.c
    GNSS-UTC-ModelReq.c
    GNSS-UTC-ModelSupport.c
    GNSSPosTechnology.c
    GPS-TOW-Assist.c
    GPS-TOW-AssistElement.c
    GSMAreaId.c
    GanssAdditionalDataChoices.c
    GanssDataBits.c
    GanssExtendedEphCheck.c
    GanssNavigationModelData.c
    GanssReqGenericData.c
    GanssRequestedCommonAssistanceDataList.c
    GanssRequestedGenericAssistanceDataList.c
    GeneralizedTime.c
    GeoAreaIndex.c
    GeoAreaMappingList.c
    GeoAreaShapesSupported.c
    GeographicTargetArea.c
    GeographicTargetAreaList.c
    Geometric-Ionospheric-Corrections-Differences-Element-r15.c
    Geometric-Ionospheric-Corrections-Differences-r15.c
    GridElement-r16.c
    GridIonElement-r12.c
    GridIonList-r12.c
    GridList-r16.c
    GsmCellInformation.c
    HRPDAreaId.c
    HighAccuracyEllipsoidPointWithAltitudeAndUncertaintyEllipsoid-r15.c
    HighAccuracyEllipsoidPointWithUncertaintyEllipse-r15.c
    HistoricReporting.c
    Horandveruncert.c
    Horandvervel.c
    HorizontalAccuracy.c
    HorizontalAccuracyExt-r15.c
    HorizontalVelocity.c
    HorizontalVelocityWithUncertainty.c
    HorizontalWithVerticalVelocity.c
    HorizontalWithVerticalVelocityAndUncertainty.c
    Horvel.c
    Horveluncert.c
    HrpdCellInformation.c
    IA5String.c
    INTEGER.c
    IPAddress.c
    Initiator.c
    KeyIdentity.c
    KeyIdentity4.c
    KlobucharModel2Parameter-r16.c
    KlobucharModelParameter.c
    LCS-GCS-Translation-Parameter-r16.c
    LPP-Message.c
    LPP-MessageBody.c
    LPP-TransactionID.c
    LTEAreaId.c
    LocationCoordinateTypes.c
    LocationCoordinates.c
    LocationData.c
    LocationDataLCI-r14.c
    LocationEncodingDescriptor.c
    LocationError.c
    LocationFailureCause.c
    LocationId.c
    LocationIdData.c
    LocationInformationType.c
    LocationSource-r13.c
    LocationUncertainty-r16.c
    LteCellInformation.c
    MAC.c
    MBS-AcquisitionAssistance-r14.c
    MBS-AlmanacAssistance-r14.c
    MBS-AssistanceDataElement-r14.c
    MBS-AssistanceDataList-r14.c
    MBS-AssistanceDataSupportList-r14.c
    MBS-BeaconMeasElement-r13.c
    MBS-BeaconMeasList-r13.c
    MCC-MNC-Digit.c
    MCC.c
    MNC.c
    MeasQuantityResults-r16.c
    MeasResultEUTRA.c
    MeasResultListEUTRA.c
    MeasuredResults.c
    MeasuredResultsElement.c
    MeasuredResultsList.c
    MeasurementReferenceTime.c
    MessageSizeLimitNB-r14.c
    MotionTimeSource-r15.c
    MultipleLocationIds.c
    MutingPattern-r16.c
    NAV-ClockModel.c
    NCGI-r15.c
    NMR.c
    NMRelement.c
    NPRS-Info-r14.c
    NR-AdditionalPath-r16.c
    NR-AdditionalPathList-r16.c
    NR-DL-AoD-AdditionalMeasurementElement-r16.c
    NR-DL-AoD-AdditionalMeasurements-r16.c
    NR-DL-AoD-Error-r16.c
    NR-DL-AoD-LocationInformation-r16.c
    NR-DL-AoD-LocationServerErrorCauses-r16.c
    NR-DL-AoD-MeasElement-r16.c
    NR-DL-AoD-MeasList-r16.c
    NR-DL-AoD-ProvideAssistanceData-r16.c
    NR-DL-AoD-ProvideCapabilities-r16.c
    NR-DL-AoD-ProvideLocationInformation-r16.c
    NR-DL-AoD-ReportConfig-r16.c
    NR-DL-AoD-RequestAssistanceData-r16.c
    NR-DL-AoD-RequestCapabilities-r16.c
    NR-DL-AoD-RequestLocationInformation-r16.c
    NR-DL-AoD-SignalMeasurementInformation-r16.c
    NR-DL-AoD-TargetDeviceErrorCauses-r16.c
    NR-DL-PRS-AssistanceData-r16.c
    NR-DL-PRS-AssistanceDataPerFreq-r16.c
    NR-DL-PRS-AssistanceDataPerTRP-r16.c
    NR-DL-PRS-BeamInfo-r16.c
    NR-DL-PRS-BeamInfoPerFreqLayer-r16.c
    NR-DL-PRS-Config-r16.c
    NR-DL-PRS-MeasCapability-r16.c
    NR-DL-PRS-Periodicity-and-ResourceSetSlotOffset-r16.c
    NR-DL-PRS-PositioningFrequencyLayer-r16.c
    NR-DL-PRS-Resource-r16.c
    NR-DL-PRS-ResourceID-r16.c
    NR-DL-PRS-ResourceSet-r16.c
    NR-DL-PRS-ResourceSetID-r16.c
    NR-DL-TDOA-AdditionalMeasurementElement-r16.c
    NR-DL-TDOA-AdditionalMeasurements-r16.c
    NR-DL-TDOA-Error-r16.c
    NR-DL-TDOA-LocationInformation-r16.c
    NR-DL-TDOA-LocationServerErrorCauses-r16.c
    NR-DL-TDOA-MeasElement-r16.c
    NR-DL-TDOA-MeasList-r16.c
    NR-DL-TDOA-ProvideAssistanceData-r16.c
    NR-DL-TDOA-ProvideCapabilities-r16.c
    NR-DL-TDOA-ProvideLocationInformation-r16.c
    NR-DL-TDOA-ReportConfig-r16.c
    NR-DL-TDOA-RequestAssistanceData-r16.c
    NR-DL-TDOA-RequestCapabilities-r16.c
    NR-DL-TDOA-RequestLocationInformation-r16.c
    NR-DL-TDOA-SignalMeasurementInformation-r16.c
    NR-DL-TDOA-TargetDeviceErrorCauses-r16.c
    NR-ECID-Error-r16.c
    NR-ECID-LocationServerErrorCauses-r16.c
    NR-ECID-ProvideCapabilities-r16.c
    NR-ECID-ProvideLocationInformation-r16.c
    NR-ECID-RequestCapabilities-r16.c
    NR-ECID-RequestLocationInformation-r16.c
    NR-ECID-SignalMeasurementInformation-r16.c
    NR-ECID-TargetDeviceErrorCauses-r16.c
    NR-MeasuredResultsElement-r16.c
    NR-MeasuredResultsList-r16.c
    NR-Multi-RTT-AdditionalMeasurementElement-r16.c
    NR-Multi-RTT-AdditionalMeasurements-r16.c
    NR-Multi-RTT-Error-r16.c
    NR-Multi-RTT-LocationServerErrorCauses-r16.c
    NR-Multi-RTT-MeasElement-r16.c
    NR-Multi-RTT-MeasList-r16.c
    NR-Multi-RTT-ProvideAssistanceData-r16.c
    NR-Multi-RTT-ProvideCapabilities-r16.c
    NR-Multi-RTT-ProvideLocationInformation-r16.c
    NR-Multi-RTT-ReportConfig-r16.c
    NR-Multi-RTT-RequestAssistanceData-r16.c
    NR-Multi-RTT-RequestCapabilities-r16.c
    NR-Multi-RTT-RequestLocationInformation-r16.c
    NR-Multi-RTT-SignalMeasurementInformation-r16.c
    NR-Multi-RTT-TargetDeviceErrorCauses-r16.c
    NR-PhysCellId-r16.c
    NR-PositionCalculationAssistanceData-r16.c
    NR-RTD-Info-r16.c
    NR-SSB-Config-r16.c
    NR-Selected-DL-PRS-IndexPerTRP-r16.c
    NR-SelectedDL-PRS-PerFreq-r16.c
    NR-TRP-LocationInfo-r16.c
    NR-TRP-LocationInfoPerFreqLayer-r16.c
    NR-TimeStamp-r16.c
    NR-TimingMeasQuality-r16.c
    NR-UL-ProvideCapabilities-r16.c
    NR-UL-RequestCapabilities-r16.c
    NR-UL-SRS-MeasCapability-r16.c
    NULL.c
    NativeEnumerated.c
    NativeInteger.c
    NavIC-CDC-r16.c
    NavIC-ClockModel-r16.c
    NavIC-CorrectionElementAutoNav-r16.c
    NavIC-CorrectionListAutoNav-r16.c
    NavIC-DifferentialCorrections-r16.c
    NavIC-DifferentialCorrectionsReq-r16.c
    NavIC-DifferentialCorrectionsSupport-r16.c
    NavIC-EDC-r16.c
    NavIC-GridModelParameter-r16.c
    NavIC-GridModelReq-r16.c
    NavIC-GridModelSupport-r16.c
    NavModel-BDS-KeplerianSet-r12.c
    NavModel-BDS-KeplerianSet2-r16.c
    NavModel-GLONASS-ECEF.c
    NavModel-SBAS-ECEF.c
    NavModelCNAV-KeplerianSet.c
    NavModelKeplerianSet.c
    NavModelNAV-KeplerianSet.c
    NeQuickModelParameter.c
    NeighbourMeasurementElement-NB-r14.c
    NeighbourMeasurementElement.c
    NeighbourMeasurementList-NB-r14.c
    NeighbourMeasurementList.c
    NetworkTime.c
    Notification.c
    NotificationMode.c
    NotificationResponse.c
    NotificationType.c
    OCTET_STRING.c
    OPEN_TYPE.c
    OTDOA-Error.c
    OTDOA-LocationServerErrorCauses.c
    OTDOA-MeasQuality.c
    OTDOA-NeighbourCellInfoElement.c
    OTDOA-NeighbourCellInfoList.c
    OTDOA-NeighbourCellInfoListNB-r14.c
    OTDOA-NeighbourCellInfoNB-r14.c
    OTDOA-NeighbourFreqInfo.c
    OTDOA-ProvideAssistanceData.c
    OTDOA-ProvideCapabilities.c
    OTDOA-ProvideLocationInformation.c
    OTDOA-ReferenceCellInfo.c
    OTDOA-ReferenceCellInfoNB-r14.c
    OTDOA-RequestAssistanceData.c
    OTDOA-RequestCapabilities.c
    OTDOA-RequestLocationInformation.c
    OTDOA-SignalMeasurementInformation-NB-r14.c
    OTDOA-SignalMeasurementInformation.c
    OTDOA-TargetDeviceErrorCauses.c
    PLMN-Identity.c
    PRS-Info-NB-r14.c
    PRS-Info.c
    Pathloss.c
    PeriodicAssistanceDataControlParameters-r15.c
    PeriodicParams.c
    PeriodicSessionID-r15.c
    PeriodicalReportingCriteria.c
    PhysCellId.c
    PhysicalReferenceStationInfo-r15.c
    Polygon.c
    PolygonArea.c
    PolygonDescription.c
    PolygonPoints.c
    PosMethod.c
    PosPayLoad.c
    PosProtocol.c
    PosProtocolVersion3GPP.c
    PosProtocolVersion3GPP2.c
    PosTechnology.c
    Position.c
    PositionEstimate.c
    PositioningModes.c
    PrefMethod.c
    PressureValidityArea-v1520.c
    PressureValidityPeriod-v1520.c
    PrimaryCCPCH-RSCP.c
    PrimaryCPICH-Info.c
    ProtLevel.c
    ProtectionLevel.c
    ProvideAssistanceData-r9-IEs.c
    ProvideAssistanceData.c
    ProvideCapabilities-r9-IEs.c
    ProvideCapabilities.c
    ProvideLocationInformation-r9-IEs.c
    ProvideLocationInformation.c
    QoP.c
    QoS.c
    RSRP-Range.c
    RSRQ-Range.c
    RTD-InfoElement-r16.c
    RTD-InfoList-r16.c
    RTD-InfoListPerFreqLayer-r16.c
    RTD.c
    RTDUnits.c
    RTK-CorrectionDifferencesElement-r15.c
    RTK-CorrectionDifferencesList-r15.c
    RTK-Residuals-Element-r15.c
    RTK-Residuals-List-r15.c
    ReferencePoint-r16.c
    ReferenceStationList-r16.c
    ReferenceTRP-RTD-Info-r16.c
    RegionIgpElement-r16.c
    RegionIgpList-r16.c
    RelativeLocation-r16.c
    RelativeLocation.c
    RelativeTime.c
    RepMode-cap.c
    RepMode.c
    RepeatedReportingParams.c
    ReportData.c
    ReportDataList.c
    ReportedLocation.c
    ReportingCap.c
    ReportingCriteria.c
    ReportingDuration.c
    ReportingMode.c
    ReqDataBitAssistanceList.c
    ReqNavListInfo.c
    RequestAssistanceData-r9-IEs.c
    RequestAssistanceData.c
    RequestCapabilities-r9-IEs.c
    RequestCapabilities.c
    RequestLocationInformation-r9-IEs.c
    RequestLocationInformation.c
    RequestedAssistData.c
    ResponseTime.c
    ResponseTimeNB-r14.c
    ResultCode.c
    ResultsPerCSI-RS-Index-r16.c
    ResultsPerCSI-RS-IndexList-r16.c
    ResultsPerSSB-Index-r16.c
    ResultsPerSSB-IndexList-r16.c
    SBAS-ClockModel.c
    SBAS-ID.c
    SBAS-IDs.c
    SET-GANSSReferenceTime.c
    SETAuthKey.c
    SETCapabilities.c
    SETId.c
    SFN-r15.c
    SLPAddress.c
    SLPMode.c
    SPCSETKey.c
    SPCSETKeylifetime.c
    SPCTID.c
    SSR-ClockCorrectionList-r15.c
    SSR-ClockCorrectionSatelliteElement-r15.c
    SSR-CodeBiasSatElement-r15.c
    SSR-CodeBiasSatList-r15.c
    SSR-CodeBiasSignalElement-r15.c
    SSR-CodeBiasSignalList-r15.c
    SSR-OrbitCorrectionList-r15.c
    SSR-OrbitCorrectionSatelliteElement-r15.c
    SSR-PhaseBiasSatElement-r16.c
    SSR-PhaseBiasSatList-r16.c
    SSR-PhaseBiasSignalElement-r16.c
    SSR-PhaseBiasSignalList-r16.c
    SSR-URA-SatElement-r16.c
    SSR-URA-SatList-r16.c
    STEC-ResidualSatElement-r16.c
    STEC-ResidualSatList-r16.c
    STEC-SatElement-r16.c
    STEC-SatList-r16.c
    SUPL-GPSTime.c
    SUPL-NavigationModel.c
    SUPL-PositionData.c
    SUPLAUTHREQ.c
    SUPLAUTHRESP.c
    SUPLEND.c
    SUPLINIT.c
    SUPLPOS.c
    SUPLPOSINIT.c
    SUPLRESPONSE.c
    SUPLSTART.c
    SV-ID.c
    SatListElement-r15.c
    SatListRelatedDataElement.c
    SatListRelatedDataList.c
    SatelliteInfo.c
    SatelliteInfoElement.c
    SatellitesListRelatedData.c
    SatellitesListRelatedDataList.c
    SegmentationInfo-r14.c
    Sensor-AssistanceDataList-r14.c
    Sensor-AssistanceDataSupportList-r14.c
    Sensor-Error-r13.c
    Sensor-LocationServerErrorCauses-r13.c
    Sensor-MeasurementInformation-r13.c
    Sensor-MotionInformation-r15.c
    Sensor-ProvideAssistanceData-r14.c
    Sensor-ProvideCapabilities-r13.c
    Sensor-ProvideLocationInformation-r13.c
    Sensor-RequestAssistanceData-r14.c
    Sensor-RequestCapabilities-r13.c
    Sensor-RequestLocationInformation-r13.c
    Sensor-TargetDeviceErrorCauses-r13.c
    SequenceNumber.c
    ServiceCapabilities.c
    ServicesSupported.c
    SessionCapabilities.c
    SessionID.c
    SessionInformation.c
    SessionList.c
    SetSessionID.c
    SlpSessionID.c
    StandardClockModelElement.c
    StandardClockModelList.c
    Status.c
    StatusCode.c
    StoredNavListInfo.c
    Supported3GPP2PosProtocolVersion.c
    SupportedBandEUTRA-v9a0.c
    SupportedBandEUTRA.c
    SupportedBandNR-r16.c
    SupportedBearers.c
    SupportedChannels-11a-r14.c
    SupportedChannels-11bg-r14.c
    SupportedNetworkInformation.c
    SupportedWCDMAInfo.c
    SupportedWLANApData.c
    SupportedWLANApsChannel11a.c
    SupportedWLANApsChannel11bg.c
    SupportedWLANApsList.c
    SupportedWLANInfo.c
    TAResolution.c
    TBS-AssistanceDataList-r14.c
    TBS-Error-r13.c
    TBS-LocationServerErrorCauses-r13.c
    TBS-MeasurementInformation-r13.c
    TBS-ProvideAssistanceData-r14.c
    TBS-ProvideCapabilities-r13.c
    TBS-ProvideLocationInformation-r13.c
    TBS-RequestAssistanceData-r14.c
    TBS-RequestCapabilities-r13.c
    TBS-RequestLocationInformation-r13.c
    TBS-TargetDeviceErrorCauses-r13.c
    TDD-Config-v1520.c
    TGSN.c
    TRP-ID-r16.c
    TRP-LocationInfoElement-r16.c
    ThirdParty.c
    ThirdPartyID.c
    TimeStamp.c
    TimeWindow.c
    TimeslotISCP-List.c
    TimeslotISCP.c
    TimingAdvance.c
    TrackingAreaCode.c
    TransactionNumber.c
    TriggerParams.c
    TriggerType.c
    TriggeredReportingCriteria.c
    TropospericDelayCorrection-r16.c
    UARFCN.c
    ULP-MeasuredResultsList.c
    ULP-PDU.c
    ULP-Velocity.c
    UMBAreaId.c
    UTC-ModelSet1.c
    UTC-ModelSet2.c
    UTC-ModelSet3.c
    UTC-ModelSet4.c
    UTC-ModelSet5-r12.c
    UTC-Time-r15.c
    UTCTime.c
    UTRA-CarrierRSSI.c
    UTRAN-GANSSReferenceTime.c
    UTRAN-GANSSReferenceTimeAssistance.c
    UTRAN-GANSSReferenceTimeResult.c
    UTRAN-GPSReferenceTime.c
    UTRAN-GPSReferenceTimeAssistance.c
    UTRAN-GPSReferenceTimeResult.c
    UTRANGANSSDriftRate.c
    UTRANGPSDriftRate.c
    UlpMessage.c
    UmbCellInformation.c
    UpdateCapabilities-r15.c
    Velocity.c
    VelocityTypes.c
    Ver.c
    Ver2-CellInfo-extension.c
    Ver2-Notification-extension.c
    Ver2-PosPayLoad-extension.c
    Ver2-PosProtocol-extension.c
    Ver2-PosTechnology-extension.c
    Ver2-RequestedAssistData-extension.c
    Ver2-SETCapabilities-extension.c
    Ver2-SUPL-END-extension.c
    Ver2-SUPL-INIT-extension.c
    Ver2-SUPL-POS-INIT-extension.c
    Ver2-SUPL-POS-extension.c
    Ver2-SUPL-RESPONSE-extension.c
    Ver2-SUPL-START-extension.c
    Ver2-SUPLNOTIFY.c
    Ver2-SUPLNOTIFYRESPONSE.c
    Ver2-SUPLREPORT.c
    Ver2-SUPLSETINIT.c
    Ver2-SUPLTRIGGEREDRESPONSE.c
    Ver2-SUPLTRIGGEREDSTART.c
    Ver2-SUPLTRIGGEREDSTOP.c
    Version.c
    VerticalAccuracy.c
    VerticalAccuracyExt-r15.c
    VisibleString.c
    WCDMAAreaId.c
    WLAN-AP-Data-r14.c
    WLAN-AP-Identifier-r13.c
    WLAN-AP-Location-r14.c
    WLAN-DataSet-r14.c
    WLAN-Error-r13.c
    WLAN-LocationServerErrorCauses-r13.c
    WLAN-MeasurementElement-r13.c
    WLAN-MeasurementInformation-r13.c
    WLAN-MeasurementList-r13.c
    WLAN-ProvideAssistanceData-r14.c
    WLAN-ProvideCapabilities-r13.c
    WLAN-ProvideLocationInformation-r13.c
    WLAN-RTT-r13.c
    WLAN-RequestAssistanceData-r14.c
    WLAN-RequestCapabilities-r13.c
    WLAN-RequestLocationInformation-r13.c
    WLAN-TargetDeviceErrorCauses-r13.c
    WLANAreaId.c
    WcdmaCellInformation.c
    WimaxAreaId.c
    WimaxBSInformation.c
    WimaxBsID.c
    WimaxNMR.c
    WimaxNMRList.c
    WimaxRTD.c
    WlanAPInformation.c
    asn_SEQUENCE_OF.c
    asn_SET_OF.c
    asn_application.c
    asn_bit_data.c
    asn_codecs_prim.c
    asn_internal.c
    asn_random_fill.c
    ber_decoder.c
    ber_tlv_length.c
    ber_tlv_tag.c
    constr_CHOICE.c
    constr_SEQUENCE.c
    constr_SEQUENCE_OF.c
    constr_SET_OF.c
    constr_TYPE.c
    constraints.c
    der_encoder.c
    per_decoder.c
    per_encoder.c
    per_opentype.c
    per_support.c
    xer_decoder.c
    xer_encoder.c
    xer_support.c
'''.split())

libasn1c_lpp_inc = include_directories('.')

libasn1c_lpp = library('ogsasn1c-lpp',
    sources : libasn1c_lpp_sources,
    version : libogslib_version,
    c_args : libasn1c_common_cc_flags,
    include_directories : libasn1c_lpp_inc,
    dependencies : [libasn1c_common_dep, libasn1c_util_dep],
    install : true)

libasn1c_lpp_dep = declare_dependency(
    link_with : libasn1c_lpp,
    include_directories : libasn1c_lpp_inc,
    dependencies : [libasn1c_common_dep, libasn1c_util_dep])
